--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 .background {
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     background-image: url(background.png)
     background-repeat: repeat-x;
     animation: slideright 600s infinite linear;
